--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/raw5">View on GitHub</a>
 
           <h1 id="project_title">Vipin Nagpal</h1>
-          <h2 id="project_tagline">Freelancer Web Developer From Delhi</h2>
+          <h2 id="project_tagline">Freelancer Rails Developer From Delhi</h2>
 
         </header>
     </div>
