--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <h2>Work</h2>
                     <img src="./ViewPoint_files/star.png" alt="">
                 </div>
-                    <p class="headline">Look, I ain't in this for your revolution, and I'm not in it for you, Princess.</p>
+                    <p class="headline"></p>
                  </div> <!-- end sixteen columns -->
                  <div class="clear"></div>
 
@@ -186,7 +186,7 @@
                     <h2>Services</h2>
                     <img src="./ViewPoint_files/star.png" alt="">
                 </div>
-                    <p class="headline">Look, I ain't in this for your revolution, and I'm not in it for you, Princess.</p>
+                    <p class="headline"></p>
                  </div> <!-- end sixteen columns -->
                  <div class="clear"></div>
 
@@ -197,7 +197,7 @@
 <p></p></div> 
 <div class="eight columns "><img class="serv-icon" alt="" src="./ViewPoint_files/serv-icon2.png"><p></p>
 <h4>Design</h4>
-<p class="serv">I though I could never be a UI expert cuz HTML/CSS were boring, but my colleges at <a href="http://vinsol.com">Vinsol</a> would sometimes call me Javascript Guru to make fun of me(I got chance to teach JS at Vinsol, Thanks to <a href="http://vinsol.com/team">Manik Junja</a> for the oppurtunity). Thanks to all the great people out there in the community to make CSS fun and easy. I love responsive design, I love <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a> and I love <a href="http://foundation.zurb.com/">Foundation</a> even more. <a href="https://www.google.co.in/?q=javascript">JavaScript</a>, <a href="https://www.google.co.in/?q=jquery">jQuery</a>, <a href="https://www.google.co.in/?q=Angular JS">Angular JS</a>, <a href="https://www.google.co.in/?q=Backbone JS">Underscore</a>, <a href="https://www.google.co.in/?q=javascript">Backbone</a> and <a href="https://www.google.co.in/?q=Sencha Touch">Sencha Touch</a>, ain't no problem. Some other tools I keep handy: <a href="https://www.google.co.in/?q=compass style">Compass</a>, <a href="https://www.google.co.in/?q=Sass Lang">Sass</a> and <a href="https://www.google.co.in/?q=Browser Stack">Browser Stack</a></p>
+<p class="serv">I though I could never be a UI expert cuz HTML/CSS was boring, but my colleges at <a href="http://vinsol.com">Vinsol</a> would sometimes call me Javascript Guru to make fun of me(I got chance to teach JS at Vinsol, Thanks to <a href="http://vinsol.com/team">Manik Junja</a> for the oppurtunity). Thanks to all the great people out there in the community to make CSS fun and easy. I love responsive design, I love <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a> and I love <a href="http://foundation.zurb.com/">Foundation</a> even more. <a href="https://www.google.co.in/?q=javascript">JavaScript</a>, <a href="https://www.google.co.in/?q=jquery">jQuery</a>, <a href="https://www.google.co.in/?q=Angular JS">Angular JS</a>, <a href="https://www.google.co.in/?q=Backbone JS">Underscore</a>, <a href="https://www.google.co.in/?q=javascript">Backbone</a> and <a href="https://www.google.co.in/?q=Sencha Touch">Sencha Touch</a>, ain't no problem. Some other tools I keep handy: <a href="https://www.google.co.in/?q=compass style">Compass</a>, <a href="https://www.google.co.in/?q=Sass Lang">Sass</a> and <a href="https://www.google.co.in/?q=Browser Stack">Browser Stack</a></p>
 <p></p></div> 
 
 <div class="clear"></div>
@@ -395,7 +395,7 @@
 
            $("#slider").css("top", "150px");
             $("#projectHover").show();
-            slider.slide($(this).data("index"))
+            slider.slide(0)
             return false; 
         })
 
@@ -470,8 +470,8 @@
 <script type="text/javascript" src="./ViewPoint_files/jquery.sticky.js"></script>
 <!-- <script type="text/javascript" src="./ViewPoint_files/jquery.transit.js"></script>
 <script type="text/javascript" src="./ViewPoint_files/nbw-parallax.js"></script> -->
-<script type="text/javascript" src="./ViewPoint_files/responsiveslides.js"></script>
-<script type="text/javascript" src="./ViewPoint_files/smooth-scroll.js"></script>
+<!-- <script type="text/javascript" src="./ViewPoint_files/responsiveslides.js"></script> -->
+<!-- <script type="text/javascript" src="./ViewPoint_files/smooth-scroll.js"></script> -->
 
 
 <!-- <script type="text/javascript" src="./ViewPoint_files/jquery.fancybox-1.3.4.js"></script>
@@ -714,11 +714,6 @@ z-index: 100000; top: 30px;">
 
     var slider = 
       Swipe(document.getElementById('slider'), {
-        continuous: true,
-        callback: function(pos) {
-          
-          
-        }
       });
     </script>
 
