bring back scroll

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 <!-- <script type="text/javascript" src="./ViewPoint_files/jquery.transit.js"></script>
 <script type="text/javascript" src="./ViewPoint_files/nbw-parallax.js"></script> -->
 <!-- <script type="text/javascript" src="./ViewPoint_files/responsiveslides.js"></script> -->
-<!-- <script type="text/javascript" src="./ViewPoint_files/smooth-scroll.js"></script> -->
+<script type="text/javascript" src="./ViewPoint_files/smooth-scroll.js"></script>
 
 
 <!-- <script type="text/javascript" src="./ViewPoint_files/jquery.fancybox-1.3.4.js"></script>
