--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <div class="twelve columns ">
 <h3>About Me</h3>
-<p></p><div class="four columns alpha "><img src="./ViewPoint_files/about-pic.png" alt="" width="220" height="180"></div> <div class="eight columns omega"><p>I am an Freelancer Rails Developer and a dreamer and a hardworker and a lazy guy and a learner and a problem solver.</p>I always thought watching movies was more fun than writing code until I worked on the last semester engineering project. I have not spent a day without writing some code or at least studying about it since, except when I am on a gang trip which he goes on almost five times a year.</p>
+<p></p><div class="four columns alpha "><img src="./ViewPoint_files/about-pic.png" alt="" width="220" height="180"></div> <div class="eight columns omega"><p>I am an Freelancer Rails Developer and a dreamer and a hardworker and a lazy guy and a learner and a problem solver.</p>I always thought watching movies was more fun than writing code until I worked on the last semester engineering project. I have not spent a day without writing some code or at least studying about it since, except when I am on a gang trip which is almost five times a year.</p>
 <p></p>
 </div> </div> 
 <div class="four columns "><div class="last_tweets">
