--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             <div class="twelve columns ">
 <h3>About Me</h3>
-<p></p><div class="four columns alpha "><img src="./ViewPoint_files/about-pic.png" alt="" width="220" height="180"></div> <div class="eight columns omega"><p>I am an Freelancer Rails Developer and a dreamer and a hardworker and a lazy guy and a learner and a problem solver.</p>I always thought watching movies was more fun than writing code until I worked on the last semester engineering project. I have not spent a day without writing some code or at least studying about it since, except when I am on a gang trip which is almost five times a year.</p>
+<p></p><div class="four columns alpha "><img src="./ViewPoint_files/about-pic.png" alt="" width="220" height="180"></div> <div class="eight columns omega"><p>I am Vipin Nagpal. I am a Freelancer Rails Developer and a dreamer and a hardworker and a lazy guy and a learner and a problem solver.</p>I always thought watching movies was more fun than writing code until I worked on the last semester engineering project. I have not spent a day without writing some code or at least studying about it since, except when I am on a gang trip which is almost five times a year.</p>
 <p></p>
 </div> </div> 
 <div class="four columns "><div class="last_tweets">
@@ -243,7 +243,7 @@
 <p class="line2nd">Sep 2010 - Apr 2012</p>
 <p></p></div> <div class="five columns omega">
 <p>Rails Developer</p>
-<p class="line2nd"><a href="http:// holidaymagic.go.disney.com">Disney Holiday Magic</a>, <a href="http://food.chipotle.com">Cipotle</a>, <a href="http://wework.com">WeWork</a>, <a href="vtapp.vinsol.com">VTapp(Vinsol Trainning App)</a> </p>
+<p class="line2nd"><a href="http:// holidaymagic.go.disney.com">Disney Holiday Magic</a>, <a href="http://food.chipotle.com">Chipotle</a>, <a href="http://wework.com">WeWork</a>, <a href="vtapp.vinsol.com">VTapp(Vinsol Trainning App)</a> and Best Buy Mobile Web App Prototype </p>
 <p></p></div>
 <div class="three columns alpha ">
 <p>Saffron</p>
@@ -287,7 +287,7 @@
             <p></p>
         </div> 
         <div class="eight columns omega">
-            <p>Three Years Plytechnic Diploma</p>
+            <p>Three Years Polytechnic Diploma</p>
             <p class="line2nd">They were always absent and I was always present</p>
             <p></p>
         </div>
