--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <img alt="" class="scale-with-grid" src="myImages/chipotle.png">
         </a>
         <p class="proj-name">Chipotle</p>
-        <p class="proj-desc">Food database for Chipotle food chain marketing team to know more about the food ingredients, nutrition facts, what makes it special and much more..</p>
+        <p class="proj-desc">Food database for Chipotle food chain marketing team to know more about the food ingredients, nutrition facts, what makes it special and much <a class="single_image" data-index = 1 href="">more..</a></p>
     </div>
 
     <div class="one-third column">
@@ -143,11 +143,11 @@
             <img alt="" class="scale-with-grid" src="myImages/disney1.jpg">
         </a>
         <p class="proj-name">Disney Holiday Magic</p>
-        <p class="proj-desc">Disney Holiday Magic is as iPhone app where you can create your customized greeting with some really cool images and animation effects which then can be shared across web..</p>
+        <p class="proj-desc">Disney Holiday Magic is as iPhone app where you can create your customized greeting with some really cool images and animation effects which then can be shared across web. <a class="single_image" data-index = 2 href="">more..</a></p>
     </div>
 
     <div class="one-third column">
-        <a class="single_image" data-index = 3 href=""><img alt="" class="scale-with-grid" src="myImages/wework2.png"></a><p class="proj-name">WeWork</p><p class="proj-desc">WeWork helps entrepreneurs, freelancers & small businesses succeed by making them more connected with each other and by providing them with services from working space to everything else..</p>
+        <a class="single_image" data-index = 3 href=""><img alt="" class="scale-with-grid" src="myImages/wework2.png"></a><p class="proj-name">WeWork</p><p class="proj-desc">WeWork helps entrepreneurs, freelancers & small businesses succeed by making them more connected with each other and by providing them with services from working space to everything else <a class="single_image" data-index = 4 href="">more..</a></p>
     </div>
 
     <div class="one-third column">
@@ -155,14 +155,14 @@
             <img alt="" class="scale-with-grid" src="myImages/bakarvids1.png">
         </a>
         <p class="proj-name">Bakarvids</p>
-        <p class="proj-desc">Bakarvids is library of Desi India Videos. Fresh Videos are meant to be posted everyday, but nobody does that anymore:(.. </p>
+        <p class="proj-desc">Bakarvids is library of Desi India Videos. Fresh Videos are meant to be posted everyday, but nobody does that anymore:( <a class="single_image" data-index = 4 href="">more..</a></p>
     </div> 
     <div class="one-third column">
         <a class="single_image" data-index = 5 href="#">
             <img alt="" class="scale-with-grid" src="myImages/indiatech.png">
         </a>
         <p class="proj-name">We Are India Tech</p>
-        <p class="proj-desc">India Tech is a social network website for developers in India..</p>
+        <p class="proj-desc">India Tech is a social network website for developers in India <a class="single_image" data-index = 5 href="">more..</a></p>
     </div>
 
     <div class="one-third column">
@@ -170,7 +170,7 @@
             <img alt="" class="scale-with-grid" src="myImages/dealhell3.png">
         </a>
         <p class="proj-name">Deal Hell</p>
-        <p class="proj-desc">Deal Hell is a collection of products(affiliate links) from top brands in the US. The project is no longer being developed:(..</p>
+        <p class="proj-desc">Deal Hell is a collection of products(affiliate links) from top brands in the US. The project is no longer being developed:( <a class="single_image" data-index = 6 href="">more..</a></p>
     </div>
                 
     </div> <!-- end container -->
@@ -203,7 +203,7 @@
 <div class="clear"></div>
 </div><br>
 <div class="testimonial">
-	<p>“Remember, a Jedi can feel the Force flowing through him. You can get a transport there to Mos Eisley or wherever you’re going.”
+	<p>“Remember, a Jedi can feel the Force flowing through him.”
 	</p></div> 
     <div style="text-align: center; display:none;" >
         <!-- <a href="http://google.ro/">
@@ -278,7 +278,7 @@
         </div> 
         <div class="eight columns omega">
             <p>Bachelor of Engineering</p>
-            <p class="line2nd">They said, "they taught everything". But I never learnt from them</p>
+            <p class="line2nd">Either you learn more or you earn more</p>
             <p></p>
         </div>
         <div class="eight columns alpha ">
@@ -293,12 +293,12 @@
         </div>
         <div class="eight columns alpha ">
             <p>Schools</p>
-            <p class="line2nd">Rest of my life - 2004</p>
+            <p class="line2nd">All my life - 2004</p>
             <p></p> 
         </div> 
         <div class="eight columns omega">
             <p>Class 10 and all others</p>
-            <p class="line2nd">How come I only remeber names of my school teachers(I just realized) and not college lectures?</p>
+            <p class="line2nd">There are there to teach, what are you there for?</p>
             <p></p>
         </div>
 
