--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <li><a href="http://raw5.github.com/#nam-fermentum-suscipit-metus-at">Services</a></li>
 <li style="border: 0"><span class="logo"><span class="logotext">V</span></span></li>
 <li><a href="http://raw5.github.com/#experience">Experience</a></li>
-<li><a href="http://vipinnagpal.wordpress.com/">Blog</a></li><li><a href="http://raw5.github.com/#contact">Contact</a></li>
+<li><a href="http://vipinnagpal.wordpress.com/" target="_black">Blog</a></li><li><a href="http://raw5.github.com/#contact">Contact</a></li>
 </ul>        </nav>
         
         <div class="title">
