--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         </div> 
         <div class="eight columns omega">
             <p>Class 10 and all others</p>
-            <p class="line2nd">There are there to teach, what are you there for?</p>
+            <p class="line2nd">They are there to teach, what are you there for?</p>
             <p></p>
         </div>
 
