--- a/index.html
+++ b/index.html
@@ -87,12 +87,10 @@
                     <h2>About</h2>
                     <img src="./ViewPoint_files/star.png" alt="">
                 </div>
-                    <p class="headline">I thought Riding Rails was hard</p>
                  </div> <!-- end sixteen columns -->
                  <div class="clear"></div>
 
             <div class="twelve columns ">
-<h3>About Me</h3>
 <p></p><div class="four columns alpha "><img src="./ViewPoint_files/about-pic.png" alt="" width="220" height="180"></div> <div class="eight columns omega"><p>I am Vipin Nagpal. I am a Freelancer Rails Developer and a dreamer and a hardworker and a lazy guy and a learner and a problem solver.</p>I always thought watching movies was more fun than writing code until I worked on the last semester engineering project. I have not spent a day without writing some code or at least studying about it since, except when I am on a gang trip which is almost five times a year.</p>
 <p></p>
 </div> </div> 
@@ -197,7 +195,7 @@
 <p></p></div> 
 <div class="eight columns "><img class="serv-icon" alt="" src="./ViewPoint_files/serv-icon2.png"><p></p>
 <h4>Design</h4>
-<p class="serv">I though I could never be a UI expert cuz HTML/CSS was boring, but my colleges at <a target="_blank" href="http://vinsol.com">Vinsol</a> would sometimes call me Javascript Guru to make fun of me(I got chance to teach JS at Vinsol, Thanks to <a target="_blank" target="_blank" href="http://vinsol.com/team">Manik Junja</a> for the oppurtunity). Thanks to all the great people out there in the community to make CSS fun and easy. I love responsive design, I love <a target="_blank" href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a> and I love <a target="_blank" target="_blank" href="http://foundation.zurb.com/">Foundation</a> even more. <a target="_blank" href="https://www.google.co.in/?q=javascript">JavaScript</a>, <a target="_blank" target="_blank" href="https://www.google.co.in/?q=jquery">jQuery</a>, <a target="_blank" href="https://www.google.co.in/?q=Angular JS">Angular JS</a>, <a target="_blank" target="_blank" href="https://www.google.co.in/?q=Backbone JS">Underscore</a>, <a target="_blank" target="_blank" href="https://www.google.co.in/?q=javascript">Backbone</a> and <a target="_blank" target="_blank" href="https://www.google.co.in/?q=Sencha Touch">Sencha Touch</a>, ain't no problem. Some other tools I keep handy: <a target="_blank" target="_blank" href="https://www.google.co.in/?q=compass style">Compass</a>, <a target="_blank" target="_blank" href="https://www.google.co.in/?q=Sass Lang">Sass</a> and <a target="_blank" target="_blank" href="https://www.google.co.in/?q=Browser Stack">Browser Stack</a></p>
+<p class="serv">I though I could never be a UI expert cuz HTML/CSS was boring, but my colleagues at <a target="_blank" href="http://vinsol.com">Vinsol</a> would sometimes call me Javascript Guru to make fun of me(I got chance to teach JS at Vinsol, Thanks to <a target="_blank" target="_blank" href="http://vinsol.com/team">Manik Junja</a> for the oppurtunity). Thanks to all the great people out there in the community to make CSS fun and easy. I love responsive design, I love <a target="_blank" href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a> and I love <a target="_blank" target="_blank" href="http://foundation.zurb.com/">Foundation</a> even more. <a target="_blank" href="https://www.google.co.in/?q=javascript">JavaScript</a>, <a target="_blank" target="_blank" href="https://www.google.co.in/?q=jquery">jQuery</a>, <a target="_blank" href="https://www.google.co.in/?q=Angular JS">Angular JS</a>, <a target="_blank" target="_blank" href="https://www.google.co.in/?q=Backbone JS">Underscore</a>, <a target="_blank" target="_blank" href="https://www.google.co.in/?q=javascript">Backbone</a> and <a target="_blank" target="_blank" href="https://www.google.co.in/?q=Sencha Touch">Sencha Touch</a>, ain't no problem. Some other tools I keep handy: <a target="_blank" target="_blank" href="https://www.google.co.in/?q=compass style">Compass</a>, <a target="_blank" target="_blank" href="https://www.google.co.in/?q=Sass Lang">Sass</a> and <a target="_blank" target="_blank" href="https://www.google.co.in/?q=Browser Stack">Browser Stack</a></p>
 <p></p></div> 
 
 <div class="clear"></div>
@@ -233,10 +231,10 @@
 <h3>Experience</h3>
 <div class="three columns alpha ">
 <p>Freelancer</p>
-<p class="line2nd">Apr 2012 - Present</p>
+<p class="line2nd">Apr 2012 - May 2012</p>
 <p></p></div> <div class="five columns omega">
 <p>Rails Developer</p>
-<p class="line2nd"><a target="_blank" href="http://mytime.com">MyTime</a>, <a target="_blank" href="http://bakarvids.com">Bakarvids</a>, <a target="_blank" href="http://dealhell.com">Bakarvids</a></p>
+<p class="line2nd"><a target="_blank" href="http://mytime.com">MyTime</a>, <a target="_blank" href="http://bakarvids.com">Bakarvids</a>, <a target="_blank" href="http://dealhell.com">Dealhell</a></p>
 <p></p></div>
 <div class="three columns alpha ">
 <p>Vinsol</p>
