work triggers slider

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <p></p><div style="text-align: center">
 <div class="eight columns "><img class="serv-icon" alt="" src="./ViewPoint_files/serv-icon1.png"><p></p>
 <h4>Development</h4>
-<p class="serv">Ruby on Rails is my favorite, I often write some utilities using Sinatra. Other tools I use often to keep my Rails app fast and least number of 500s: <a target="_blank" href="http://www.mysql.com/">Mysql</a>, <a target="_blank" href="http://redis.io/">Redis</a>, <a target="_blank" href="http://memcached.org/">Memcached</a>, <a target="_blank" href="elasticsearch.org">ElasticSearch</a>, <a target="_blank" href="http://mperham.github.com/sidekiq/" target="_blank">Sidekiq</>, <a target="_blank" href="http://cukes.info/">Cucumber</a>, <a target="_blank" href="http://rspec.info/">RSpec</a>, <a target="_blank" href="https://github.com/jnicklas/capybara">Capybara</a>, <a target="_blank" href="http://docs.seleniumhq.org/">Selenium</a>, <a target="_blank" href="http://aws.amazon.com/ec2/">EC2</a>, <a target="_blank" href="http://aws.amazon.com/s3/">S3</a>, <a target="_blank" href="http://www.heroku.com/">Heroku</a>, <a target="_blank" href="http://mmonit.com/monit/">Monit</a>, <a target="_blank" href="https://github.com/ohler55/oj">OJ</a>, <a target="_blank" href="http://google.com?q=nokogiri">Nokogiri</a>, </a href="http://mechanize.rubyforge.org/">Mechanize</a> and nearly anything that is required to solve a problem at times. Also Facebook, Google and any other app, ain't no problem.</p>
+<p class="serv">Ruby on Rails is my favorite, I often write some utilities using Sinatra. Other tools I use often to keep my Rails app fast and least number of 500s: <a target="_blank" href="http://www.mysql.com/">Mysql</a>, <a target="_blank" href="http://redis.io/">Redis</a>, <a target="_blank" href="http://memcached.org/">Memcached</a>, <a target="_blank" href="elasticsearch.org">ElasticSearch</a>, <a target="_blank" href="http://mperham.github.com/sidekiq/" target="_blank">Sidekiq<a/>, <a target="_blank" href="http://cukes.info/">Cucumber</a>, <a target="_blank" href="http://rspec.info/">RSpec</a>, <a target="_blank" href="https://github.com/jnicklas/capybara">Capybara</a>, <a target="_blank" href="http://docs.seleniumhq.org/">Selenium</a>, <a target="_blank" href="http://aws.amazon.com/ec2/">EC2</a>, <a target="_blank" href="http://aws.amazon.com/s3/">S3</a>, <a target="_blank" href="http://www.heroku.com/">Heroku</a>, <a target="_blank" href="http://mmonit.com/monit/">Monit</a>, <a target="_blank" href="https://github.com/ohler55/oj">OJ</a>, <a target="_blank" href="http://google.com?q=nokogiri">Nokogiri</a>, </a href="http://mechanize.rubyforge.org/">Mechanize</a> and nearly anything that is required to solve a problem at times. Also Facebook, Google and any other app, ain't no problem.</p>
 <p></p></div> 
 <div class="eight columns "><img class="serv-icon" alt="" src="./ViewPoint_files/serv-icon2.png"><p></p>
 <h4>Design</h4>
@@ -231,7 +231,7 @@
 <h3>Experience</h3>
 <div class="three columns alpha ">
 <p>Freelancer</p>
-<p class="line2nd">Apr 2012 - May 2012</p>
+<p class="line2nd">Apr 2012 - Present</p>
 <p></p></div> <div class="five columns omega">
 <p>Rails Developer</p>
 <p class="line2nd"><a target="_blank" href="http://mytime.com">MyTime</a>, <a target="_blank" href="http://bakarvids.com">Bakarvids</a>, <a target="_blank" href="http://dealhell.com">Dealhell</a></p>
@@ -271,12 +271,12 @@
         <h3>Education</h3>
         <div class="eight columns alpha ">
             <p>Institute of Technology & Management, Gurgaon</p>
-            <p class="line2nd">July 2007 - June 2007</p>
+            <p class="line2nd">July 2007 - June 2010</p>
             <p></p>
         </div> 
         <div class="eight columns omega">
             <p>Bachelor of Engineering</p>
-            <p class="line2nd">Either you learn more or you earn more</p>
+            <p class="line2nd" style="visibility: hidden">Either you learn more or you earn more</p>
             <p></p>
         </div>
         <div class="eight columns alpha ">
@@ -286,7 +286,7 @@
         </div> 
         <div class="eight columns omega">
             <p>Three Years Polytechnic Diploma</p>
-            <p class="line2nd">They were always absent and I was always present</p>
+            <p class="line2nd" style="visibility: hidden">They were always absent and I was always present</p>
             <p></p>
         </div>
         <div class="eight columns alpha ">
@@ -296,7 +296,7 @@
         </div> 
         <div class="eight columns omega">
             <p>Class 10 and all others</p>
-            <p class="line2nd">They are there to teach, what are you there for?</p>
+            <p class="line2nd" style="visibility: hidden">They are there to teach, what are you there for?</p>
             <p></p>
         </div>
 
