--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div> <!-- end container -->
         </div> <!-- end bg -->
                   <div class="dotted-bar2">
-            <a target="_blank" href="http://raw5.github.com/#intro"><span class="top"></span></a>
+            <a  href="http://raw5.github.com/#intro"><span class="top"></span></a>
         </div>
                     <div class="bg" id="work">
             <div class="container">
@@ -174,7 +174,7 @@
     </div> <!-- end container -->
     </div> <!-- end bg -->
                   <div class="dotted-bar2">
-            <a target="_blank" href="http://raw5.github.com/#intro"><span class="top"></span></a>
+            <a  href="http://raw5.github.com/#intro"><span class="top"></span></a>
         </div>
                     <div class="bg" id="nam-fermentum-suscipit-metus-at">
             <div class="container">
