--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
 
     <div class="one-third column">
-        <a target="_blank" class="single_image" data-index = 3 href=""><img alt="" class="scale-with-grid" src="myImages/wework2.png"></a><p class="proj-name">WeWork</p><p class="proj-desc">WeWork helps entrepreneurs, freelancers & small businesses succeed by making them more connected with each other and by providing them with services from working space to everything else <a target="_blank" class="single_image" data-index = 4 href="">more..</a></p>
+        <a target="_blank" class="single_image" data-index = 3 href=""><img alt="" class="scale-with-grid" src="myImages/wework2.png"></a><p class="proj-name">WeWork</p><p class="proj-desc">WeWork runs a network of co-working spaces in major cities that rent desks and whole floors to entrepreneurs <a target="_blank" class="single_image" data-index = 4 href="">more..</a></p>
     </div>
 
     <div class="one-third column">
@@ -608,7 +608,7 @@ z-index: 100000; top: 30px;">
                 </div>
                 <div class="content">
                     <h2>WeWork</h2>
-                    <p>WeWork is fully featured Social Network for their clients with rich design, on the other hand it is CMS for WeWork administration to avoid all the paper work. Wework in its on is pretty big application with rather complex schema design.</p>
+                    <p>WeWork runs a network of co-working spaces in major cities that rent desks and whole floors to entrepreneurs. We at Vinsol developed a virtual community space to link up like-minded people at WeWork locations across the country. We built social features so that tenants can send messages, develop profiles, and follow each other.  Also built more effective tools for managing billing and tenant accounts.</p>
                     <h2>Features</h2>
                     <p>
                         Rich and Reponsive Design, Scalable, Rich Animations for social part of it
