--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <img alt="testing alt" class="scale-with-grid" src="myImages/mytime1.png" data-index = 0>
         </a>
         <p class="proj-name">MyTime</p>
-        <p class="proj-desc">MyTime is an easier way to book appointments. Booking appointment is as easy as buying a product on Amazon..</p>
+        <p class="proj-desc">MyTime is an easier way to book appointments. Booking appointment is as easy as buying a product on Amazon <a target="_blank" class="single_image" data-index = 0 href="">more..</a></p>
     </div>
     <div class="one-third column">
         <a target="_blank" class="single_image" data-index = 1 href="http://food.chipotle.com">
