--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 <div class="eight columns "><img class="serv-icon" alt="" src="./ViewPoint_files/serv-icon1.png"><p></p>
 <h4>Development</h4>
 <p class="serv">Ruby on Rails is my favorite, I often write some utilities using Sinatra. Other tools I use often to keep my Rails app fast and least number of 500s: <a target="_blank" href="http://www.mysql.com/">Mysql</a>, <a target="_blank" href="http://redis.io/">Redis</a>, <a target="_blank" href="http://memcached.org/">Memcached</a>, <a target="_blank" href="elasticsearch.org">ElasticSearch</a>, <a target="_blank" href="http://mperham.github.com/sidekiq/" target="_blank">Sidekiq<a/>, <a target="_blank" href="http://cukes.info/">Cucumber</a>, <a target="_blank" href="http://rspec.info/">RSpec</a>, <a target="_blank" href="https://github.com/jnicklas/capybara">Capybara</a>, <a target="_blank" href="http://docs.seleniumhq.org/">Selenium</a>, <a target="_blank" href="http://aws.amazon.com/ec2/">EC2</a>, <a target="_blank" href="http://aws.amazon.com/s3/">S3</a>, <a target="_blank" href="http://www.heroku.com/">Heroku</a>, <a target="_blank" href="http://mmonit.com/monit/">Monit</a>, <a target="_blank" href="https://github.com/ohler55/oj">OJ</a>, <a target="_blank" href="http://google.com?q=nokogiri">Nokogiri</a>, <a href="http://mechanize.rubyforge.org/">Mechanize</a> and nearly anything that is required to solve a problem at times. Also Facebook, Google and any other app, ain't no problem.
-My deployment kit consists of Nginx, Apache, Puma, Unicorn and Passanger. I also sometimes deploy to Heroku for a free Box
+My deployment kit consists of Nginx, Apache, Puma, Unicorn and Passenger. I also sometimes deploy to Heroku for a free Box
 </p>
 <p></p></div> 
 <div class="eight columns "><img class="serv-icon" alt="" src="./ViewPoint_files/serv-icon2.png"><p></p>
@@ -542,7 +542,7 @@ z-index: 100000; top: 30px;">
                     </p>
                     <h2>Server</h2>
                     <p>
-                        Ruby on Rails, Mysql, Memcached, Elastic Search, EC2, RDS, S3, Capistrano, Geocoding, rSpec, Cucumber, Capybara, Imagemagick, Apache, Passanger, Nginx(Load Balancer) and more
+                        Ruby on Rails, Mysql, Memcached, Elastic Search, EC2, RDS, S3, Capistrano, Geocoding, rSpec, Cucumber, Capybara, Imagemagick, Apache, Passenger, Nginx(Load Balancer) and more
                     </p>
                     <h2>Client</h2>
                     <p>
@@ -571,7 +571,7 @@ z-index: 100000; top: 30px;">
                     </p>
                     <h2>Server</h2>
                     <p>
-                        Ruby on Rails, Mysql, Imagemagick, Apache, Passanger, Sphinx and more
+                        Ruby on Rails, Mysql, Imagemagick, Apache, Passenger, Sphinx and more
                     </p>
                     <h2>Client</h2>
                     <p>
@@ -600,7 +600,7 @@ z-index: 100000; top: 30px;">
                     </p>
                     <h2>Server</h2>
                     <p>
-                        Ruby on Rails, Mysql, Imagemagick, Apache, Passanger, OJ(for faster JSON parsing), Page Caching, S3 and more
+                        Ruby on Rails, Mysql, Imagemagick, Apache, Passenger, OJ(for faster JSON parsing), Page Caching, S3 and more
                     </p>
                     <h2>Client</h2>
                     <p>
