--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                  <div class="clear"></div>
 
             <div class="twelve columns ">
-<p></p><div class="four columns alpha "><img src="./ViewPoint_files/about-pic.png" alt="" width="220" height="180"></div> <div class="eight columns omega"><h3>I am no longer taking new projects but I am for a coffee or a beer. Come see me at <a href="http://www.eroslabs.co/our-team/">Eros Labs</a></h3><p>I am Vipin Nagpal. I am a Freelancer Rails Developer, dreamer, hardworker, learner and problem solver.</p>I always thought watching movies was more fun than writing code until I worked on the last semester engineering project. I have not spent a day without writing some code or at least studying about it since, except when I am on a gang trip which is almost five times a year.</p>
+<p></p><div class="four columns alpha "><img src="./ViewPoint_files/about-pic.png" alt="" width="220" height="180"></div> <div class="eight columns omega"><h4>I am no longer taking new projects but I am up for a coffee or a beer. Come see me at <a style='color: #0078C4' href="http://www.eroslabs.co/our-team/">Eros Labs</a></h4><p>I am Vipin Nagpal. I am a Freelancer Rails Developer, dreamer, hardworker, learner and problem solver.</p>I always thought watching movies was more fun than writing code until I worked on the last semester engineering project. I have not spent a day without writing some code or at least studying about it since, except when I am on a gang trip which is almost five times a year.</p>
 <p></p>
 </div> </div> 
 <div class="four columns "><div class="last_tweets">
