--- a/hike.html
+++ b/hike.html
@@ -18610,10 +18610,10 @@ Ruby on Rails Developer at Vinsol
                                                                                                                             <!---->
                                                                                                                             <ng-transclude>
                                                                                                                                 <ul>
-                                                                                                                                    <li style="margin-bottom: 15px">Got involved in development of products with Ruby On Rails as chosen framework.</li>
+                                                                                                                                    <li style="margin-bottom: 15px">Got involved in the development of products with Ruby On Rails as chosen framework.</li>
                                                                                                                                     <li style="margin-bottom: 15px">Built mobile web applications using Sencha Touch and Ext JS.</li>
                                                                                                                                     <li style="margin-bottom: 15px">Managed meetings and discussions with clients.</li>
-                                                                                                                                    <li style="margin-bottom: 15px">Handeled server architecture and deployment on variants of Linux distorts.</li>
+                                                                                                                                    <li style="margin-bottom: 15px">Handled server architecture and deployment on variants of Linux distorts.</li>
                                                                                                                                     <li style="margin-bottom: 15px">Took training sessions and seminars on various technical topics to support fresh recruits.</li>
                                                                                                                                 </ul>
                                                                                                                             </ng-transclude>
@@ -18915,8 +18915,8 @@ The Letter
 
                                                                                                                                         I am currently Tech Lead at Eros Labs(Part incubator, part investment firm backed by Eros Group).
 
-                                                                                                                                        As I saw opening for a Senior Product Manager at Hike, I knew it was perfect for me and that I was perfect solution for you. Let me to explain further.<br /><br />
-                                                                                                                                        I have played different roles during my career which mostly revolved around technology and web, but I have realized that every role was more demanding than the previous one and they required more than more than just being a code geek.
+                                                                                                                                        As I saw opening for a Senior Product Manager at Hike, I knew it was perfect for me and that I was a perfect solution for you. Let me explain further.<br /><br />
+                                                                                                                                        I have played different roles during my career which mostly revolved around technology and the web, but I have realized that every role was more demanding than the previous one and they required more than more than just being a code geek.
 
 
 
@@ -18926,11 +18926,11 @@ The Letter
                                                                                                                                     <li style="margin-bottom: 15px">I am passionate about building products that have an impact on customers' business as well as users' lives and provide solutions to the real-world problems. Understanding the challenges, combined with practical implementations and technologies, has always been my key to designing and delivering products.</li>
                                                                                                                                     <li style="margin-bottom: 15px">For almost three years I worked as an IT consultant and developer for US startups. Getting good clients had always been important, I always made sure that I never ran out of clients with my proven sales and marketing strategies.</li>
 
-                                                                                                                                    <li style="margin-bottom: 15px">While on papers I am a Tech Lead at Eros Labs, in reality most of the time I am wearing a mask of a Product Manager who understands tech deeply.</li>
+                                                                                                                                    <li style="margin-bottom: 15px">While on papers I am a Tech Lead at Eros Labs, in reality, most of the time I am wearing a mask of a Product Manager who understands tech deeply.</li>
                                                                                                                                     <li style="margin-bottom: 15px">
                                                                                                                                         To the extent that the position requires analysis of business rules and technical skills, I have specific experience in two main areas that are closely related. <br/>
                                                                                                                                         On the analysis side, I am responsible for taking data from different sources, extracting functional requirements and translating them into detailed requirements.<br />
-                                                                                                                                        On the technical side, as a Tech Lead I am responsible for designing the architecture of the product, writing and reviewing code with upmost quality assurance, leading the team of developers and UI/UX professionals and ensuring deliverables are completed within the given timeline.
+                                                                                                                                        On the technical side, as a Tech Lead I am responsible for designing the architecture of the product, writing and reviewing code with utmost quality assurance, leading the team of developers and UI/UX professionals and ensuring deliverables are completed within the given timeline.
                                                                                                                                     </li>
                                                                                                                                 </ul>
                                                                                                                                 </div>
@@ -21483,10 +21483,10 @@ Achievements
                                                                                                                                             Single-handedly upped MyTime sales by 2000% in 3 months by incorporating various SEO techniques.
                                                                                                                                         </li>
                                                                                                                                         <li style="margin-bottom: 15px">
-                                                                                                                                            Developed and managed handful of products from ground to top throughout my career.
+                                                                                                                                            Developed and managed a handful of products from ground to top throughout my career.
                                                                                                                                         </li>
                                                                                                                                         <li style="margin-bottom: 15px">
-                                                                                                                                            Deployed complex, self scaling and very secure HIPAA compliant hosting infrastructure on GCP.
+                                                                                                                                            Deployed complex, self-scaling and very secure HIPAA compliant hosting infrastructure on GCP.
                                                                                                                                         </li>
                                                                                                                                         <li style="margin-bottom: 15px">
                                                                                                                                             Trained a team of 15 fresh recruits on various frontend and backend technologies at Vinsol.
@@ -21691,7 +21691,7 @@ Hands-on experience working on various complex web and mobile products/applicati
                                                                                                                                         <!---->
                                                                                                                                         <!---->
                                                                                                                                         <ng-transclude><span>
-Have worked closely with mutiple enterprises and startups.
+Have worked closely with multiple enterprises and startups.
                                                                                                                                             </span>
                                                                                                                                         </ng-transclude>
                                                                                                                                     </a>
