--- a/hike.html
+++ b/hike.html
@@ -19230,7 +19230,7 @@ track by availableChart.type" jfk-model-value="::availableChart.type" chart-id="
                                                                                                                                 <!---->
                                                                                                                                 <!---->
                                                                                                                                 <!---->
-                                                                                                                                <img style="width: 475px;" src="http://vipinnagpal.com/Home - TestRoR_files/chart (1).png">
+                                                                                                                                <img style="width: 552px;" src="http://vipinnagpal.com/Home - TestRoR_files/chart (1).png">
                                                                                                                                 <div style="display:none" chart-type="GAE_SUMMARY" ng-repeat="availableChart in cardCtrl.availableCharts
 track by availableChart.type" ng-if="selectedChart.type === availableChart.type">
                                                                                                                                     <div mon-timeseries-chart="" change="cardCtrl.chartUpdated(chart)" ng-attr-format="{{availableChart.format}}" class="p6n-projectdetail-timeseries-chart">
@@ -19522,8 +19522,17 @@ Technical Skills
                                                                                                             <div class="p6n-card-chart-item-set">
                                                                                                                 <ng-transclude>
                                                                                                                     <!---->
-                                                                                                                    <pan-card-chart-item ng-repeat="selectedChart in cardCtrl.selectedCharts
-track by selectedChart.id" chart-index="0">                                                                             <img style="width: 475px;" src="http://vipinnagpal.com/Home - TestRoR_files/chart.png">
+                                                                                                                    <pan-card-chart-item ng-repeat="selectedChart in cardCtrl.selectedCharts track by selectedChart.id" chart-index="0">
+                                                                                                                        <ul style="padding: 10px 44px 10px 60px;">
+                                                                                                                            <li><h2>Backend Technologies:</h2></li>
+                                                                                                                            <li style="margin: -8px 0 16px">Ruby, Ruby on Rails, Mysql, Elasticsearch, Postgresql, Redis, Memcached, Sinatra, rSpec, Capybara, Selenium, Cucumber</li>
+                                                                                                                            <li><h2>Frontend and Mobile Technologies:</h2></li>
+                                                                                                                            <li style="margin: -8px 0 16px">HTML5, CSS3, Sencha Touch, Phonegap, Compass, Twitter Bootstrap, jQuery, YUI, Underscore</li>
+                                                                                                                            <li><h2>Devops:</h2></li>
+                                                                                                                            <li style="margin: -8px 0 16px">Nginx, Puma, Google Cloud Platform, AWS, OpenVPN, Auto-scaling</li>
+
+                                                                                                                        </ul>
+                                                                                                                        <img style="width: 552px;" src="http://vipinnagpal.com/Home - TestRoR_files/chart.png">
                                                                                                                         <div style="display:none;" class="p6n-card-chart-item">
                                                                                                                             <ng-transclude>
                                                                                                                                 <pan-card-chart-title class="p6n-projectdetail-chartselector">
