--- a/facebook.html
+++ b/facebook.html
@@ -21214,7 +21214,7 @@ Projects
                                                                                                                                     AlternaCare
                                                                                                                                 </div>
                                                                                                                                 <div class="p6n-card-item-secondary">
-                                                                                                                                    Duration: 1.8 Years
+                                                                                                                                    Duration: 1.8 Years(Current)
                                                                                                                                 </div>
                                                                                                                             </ng-transclude>
                                                                                                                         </a>
