--- a/oyorooms.html
+++ b/oyorooms.html
@@ -17380,7 +17380,7 @@ platformBarCtrl.widgets.SETTINGS)">
                                                 <div class="goog-inline-block p6n-accountchooser-links" style="-webkit-user-select: none;">
 
                                                     <div class="p6n-profilename p6n-fullname" style="-webkit-user-select: none;">
-                                                        Resume for Product Manager at MakeMyTrip</div>
+                                                        Resume for Product Manager at Oyorooms</div>
                                                     <span class="p6n-profileemail" style="-webkit-user-select: none;">vipin@eroslabs.co</span>
                                                     <div class="p6n-profilelinks" style="-webkit-user-select: none;">
                                                         <a target="_blank" ng-href="https://accounts.google.com/b/0/ManageAccount?service=cloudconsole" track-as="email" href="https://accounts.google.com/b/0/ManageAccount?service=cloudconsole" style="-webkit-user-select: none;">
@@ -17558,7 +17558,7 @@ WORK
                             <!---->
                             <!---->
                             <span class="p6n-action-bar-title" ng-show="titleCtrl.isTitleShown" role="heading" aria-level="1" has-title="containerCtrl.hasTitle">
-Resume for Product Manager at MakeMyTrip
+Resume for Engineering Manager at Oyorooms
 <!---->
 </span>
                             <div class="p6n-action-bar-layout-parent" pan-on-resize="containerCtrl.actionBarResizer.recalculateLayout()" style="position: relative;">
@@ -18915,7 +18915,7 @@ The Letter
 
                                                                                                                                         I am currently Tech Lead at Eros Labs(Part incubator, part investment firm backed by Eros Group).
 
-                                                                                                                                        As I saw opening for a Product Manager at MakeMyTrip, I knew it was perfect for me and that I was a perfect solution for you. Let me explain further.<br /><br />
+                                                                                                                                        As I saw opening for a Engineering Manager at Oyorooms, I knew it was perfect for me and that I was a perfect solution for you. Let me explain further.<br /><br />
                                                                                                                                         I have played different roles during my career, mostly revolving around mobile and web technologies. I have realized that every role was more demanding than the previous one and they required more than more than just being a code geek. Not only that I have been a Code Geek, but at times I would wear different hats labeling Growth Marketer, Product Manager, Sales & Marketing Person and others.
 
 
@@ -18924,9 +18924,9 @@ The Letter
                                                                                                                                     <ul style="list-style-type:square">
 
                                                                                                                                     <li style="margin-bottom: 15px">I am passionate about building products that have an impact on customers' business as well as users' lives and provide solutions to the real-world problems. Understanding the challenges, combined with practical implementations and technologies, has always been my key to designing and delivering products.</li>
-                                                                                                                                    <li style="margin-bottom: 15px">For almost three years I worked as an IT consultant and developer for US startups from. Getting good clients had always been important, I always made sure that I never ran out of clients with my proven Growth Marketing strategies.</li>
+                                                                                                                                    <li style="margin-bottom: 15px">For almost three years I worked as an IT Consultant and Web Developer for US startups focusing on variety of technologies and different complexity levels of the products.</li>
 
-                                                                                                                                    <li style="margin-bottom: 15px">While on papers I am a Tech Lead at Eros Labs, in reality, most of the time I am wearing a mask of a Product Manager who understands tech deeply.</li>
+                                                                                                                                    <li style="margin-bottom: 15px; display: none;  ">While on papers I am a Tech Lead at Eros Labs, in reality, most of the time I am wearing a mask of a Product Manager who understands tech deeply.</li>
                                                                                                                                     <li style="margin-bottom: 15px">
                                                                                                                                         To the extent that the position requires analysis of business rules and technical skills, I have specific experience in two main areas that are closely related. <br/>
                                                                                                                                         On the analysis side, I am responsible for taking data from different sources, extracting functional requirements and translating them into detailed requirements.<br />
@@ -23905,7 +23905,7 @@ p6n-dropdown-meta-unpinned">
                                                             <div class="goog-inline-block p6n-accountchooser-links" style="-webkit-user-select: none;">
 
                                                                 <div class="p6n-profilename p6n-fullname" style="-webkit-user-select: none;">
-                                                                    Resume for Product Manager at MakeMyTrip</div>
+                                                                    Resume for Product Manager at Oyorooms</div>
                                                                 <span class="p6n-profileemail" style="-webkit-user-select: none;">vipin.itm@gmail.com</span>
                                                                 <div class="p6n-profilelinks" style="-webkit-user-select: none;">
                                                                     <a target="_blank" ng-href="https://accounts.google.com/b/0/ManageAccount?service=cloudconsole" track-as="email" href="https://accounts.google.com/b/0/ManageAccount?service=cloudconsole" style="-webkit-user-select: none;">
